# jax-fem

./: .buildinfo  .flake8  .gitignore  MANIFEST.in  README.md  dev_environment.yml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: deploy.yml  mirror_gitee.yml
_modules/: dataclasses.html  functools.html  index.html
_modules/jax_fem/: basis.html  fe.html  generate_mesh.html  logger_setup.html  mma.html  problem.html  solver.html  utils.html
_sources/: index.rst
_sources/advanced/: adv_main.md
_sources/guide/: Installation.md  Quickstart.md
_sources/learn/: compute_gradients.ipynb  linear_elasticity.ipynb  overview.md  plasticity.ipynb  poisson.ipynb  topology_optimization.ipynb
_sources/more/: FAQ.md  citation.md  contact.md  log.md  project.md
_static/: custom.css  documentation_options.js
advanced/: adv_main.html
applications/: README.md
applications/aesthetic/: models.py  to.py  tree.py  tree_utils.py
applications/arc_length/: README.md  beam2d_arc_length.py  beam2d_arc_length_disp_driven.py  beam2d_arc_length_force_driven.py  beam2d_displacement.py  beam2d_dynamic_relaxation_disp_driven.py  beam2d_force.py  beam2d_newton.py  demo_analytical.py  hyperelastic_models.py
applications/battery/: main.py  matlab_fns.py  micro.py  para.py  prep.py  utils.py
applications/boundary_index/: example.py
applications/buckling/: beam3d.py  cellular_solid.py  fenics_beam.py
applications/cauchy_bc/: example.py
applications/convergence_rate/: example.py
applications/crystal_plasticity/: calibration.py  models.py  polycrystal_am.py  polycrystal_neper.py  simple.py
applications/demo/: example.py  serendipity.py
applications/dendrite/: README.md
applications/design/: curve.py
applications/differentiable_mesh/: README.md  example.py  finite_difference.py
applications/dynamic_relaxation/: README.md  beam2d_displacement.py  beam3d.py  beam3d_displacement.py  cellular_displacement.py
applications/experiments/: example.py
applications/fem/: README.md
applications/fem_examples/: fenicsx_examples.py  jax_examples.py  utils.py
applications/forming/: README.md  example_disp.py  example_force.py  model.py  single.py  single_cell.py  thin_plate.py
applications/full_field_infer/: poisson.py  utils.py
applications/hessian/: backup.py  hess_manager.py  hyperelasticity.py  poisson.py  shape.py  simple.py  thermal_mechanical.py  utils.py  validation.py
applications/multi_scale/: README.md  deploy.py  fem_model.py  run.sh  rve.py  utils.py
applications/nodal_stress/: example.py
applications/parallel/: example.py  poisson_fenicsx.py  poisson_gold.py  poisson_mpi.py
applications/periodic_bc/: README.md  example.py  fenics.py
applications/phase_field_fracture/: README.md  eigen.py  example.py
applications/plasticity_gradient/: example.py
applications/quiet_element/: example.py
applications/robin_bc/: example.py  fenics.py
applications/scalability/: example_forward.py  example_inverse_timing.py  hyperelastic3d_common.py
applications/serendipity/: example.py  remarks_using_pprof.md
applications/stokes/: example.py  example_1var.py  example_2vars.py  fenics.py
applications/surrogate_model/: example.py  readme.md  train.py
applications/thermal/: bare_plate.py  models.py  thin_wall.py  utils.py
applications/thermal_mechanical/: README.md
applications/thermal_mechanical_full/: README.md  example.py
applications/third_medium_contact/: example.py
applications/top_opt/: L_shape.py  box.py  eigen.py  fem_model.py  multi_material.py  plasticity.py  utils.py
applications/updated_lagrangian/: README.md  example.py
applications/wave/: README.md  example.py  fenics.py
demos/: README.md
demos/fem/: README.md
demos/hyperelasticity/: README.md  example.py
demos/inverse/: README.md  example.py
demos/linear_elasticity/: README.md  example.py
demos/phase_field_fracture/: README.md  example.py
demos/plasticity/: README.md  example.py
demos/poisson/: README.md  example.py
demos/thermal_mechanical/: README.md  animation.py  example.py
demos/thermal_mechanical_full/: README.md  example.py  fenics.py
demos/topology_optimization/: README.md  animation.py  example.py
guide/: Installation.html  Quickstart.html
jax-fem/: README.md  core.py
jax_am/: common.py
jax_fem/: README.md  __init__.py  basis.py  core.py  fe.py  generate_mesh.py  hessian.py  mma.py  models.py  problem.py  solver.py  utils.py
learn/: compute_gradients.html  hyperelasticity.html  hyperelasticity.ipynb  linear_elasticity.html  linear_elasticity.ipynb  overview.html  plasticity.html  plasticity.ipynb  poisson.html  poisson.ipynb  topology_optimization.html  topology_optimization.ipynb
more/: FAQ.html  citation.html  contact.html  log.html  project.html
notebooks/: de_co.ipynb
src/: mma.py  solver.py
tests/: elasticity2d_code.py  test_autodiff_jvp_wrapper.py
tests_for_fem/: elasticity2d_code.py  test_autodiff_jvp_wrapper.py
(+369 files in other folders)
