[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jax-fem"
version = "0.0.10"
requires-python = ">=3.9"
authors = [
  {name = "Tianju Xue", email = "cetxue@ust.hk"},
  {name = "Weipeng Xu", email = "wxuby@connect.ust.hk"}
]
description = "A GPU accelerated Finite element analysis package in JAX."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["JAX", "GPU", "Python", "Finite element analysis", "Differentiable programming"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3"
]

[tool.setuptools]
packages = ["jax_fem"]
