[metadata]
name = jax-fem
version = file: VERSION
author = Tianju Xue
author_email = cetxue@ust.hk
description = GPU accelerated Finite element analysis package in JAX.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = keyword1, keyword2, keyword3
url = https://yourhomepage.com
license = GPL-3.0 License
license_files = file: LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where=src