[metadata]
name = jax-fem
version = 0.0.2
author = Tianju Xue
author_email = cetxue@ust.hk
description = GPU accelerated Finite element analysis package in JAX.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = JAX, GPU, Python, Finite element analysis, Differentiable programming
license = GPL-3.0 License
license_files = file: LICENSE
classifiers =
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
packages=jax_fem
include_package_data = True
python_requires = >=3.9

